syntax = "proto3";
package forge_abi;

import "google/protobuf/timestamp.proto";
import "type.proto";

message DepositTetherTx {
  // The amount of token to deposit
  BigUint value = 1;
  // The amount of token to reward custodian when the deposit is withdrew.
  BigUint commission = 2;
  // The amount of toekn to reward custodian when the deposit is revoked.
  BigUint charge = 3;
  // Target chain Id
  string target = 4;
  // The address of the withdrawer who is the only one allowed to withdraw the tether before locktime.
  string withdrawer = 5;
  // The UTC datetime before which this tether is locked. Before this time point, the depositor is not allowed to withdraw the tether, but can do it after this time point.
  // This field is to prevent the scenario where the withdrawer refuses to do the transaction after depositor deposits token and make the token hang there forever.
  google.protobuf.Timestamp locktime = 6;
}
