syntax = "proto3";
package forge_abi;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "type.proto";
import "exchange.proto";
import "deposit_tether.proto";

// In order to make the content in this folder self-contained we need to duplicate the protobuf definition here.

// In order to make the content in this folder self-contained we need to duplicate the protobuf definition here.

message TetherExchangeInfo {
  BigUint value = 1;
  repeated string assets = 2;
  Transaction deposit = 3;
}

// This transaction is designed to make cross-chain transaction.
message ExchangeTetherTx {
  ExchangeInfo sender = 1;
  TetherExchangeInfo receiver = 2;
  google.protobuf.Timestamp expired_at = 3;

  // forge won't touch this field. Only forge app shall handle it.
  google.protobuf.Any data = 15;
}
