syntax = "proto3";
package forge_abi;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "type.proto";
import "exchange.proto";
import "exchange_tether.proto";

// In order to make the content in this folder self-contained we need to duplicate the protobuf definition here.


// In order to make the content in this folder self-contained we need to duplicate the protobuf definition here.

// In order to make the content in this folder self-contained we need to duplicate the protobuf definition here.

message TetherTradeInfo {
  BigUint value = 1;
  repeated string assets = 2;
  // The tether address
  string tether = 3;
}

// This transaction is designed to make cross-chain transaction.
message WithdrawTetherTx {
  // The outter transaction's fields
  string from = 1;
  uint64 nonce = 2;
  string chain_id = 3;
  bytes pk = 4;
  bytes signature = 5;
  repeated Multisig signatures = 6;

  // The inner exchange tether transaction's fields
  ExchangeInfo sender = 7;
  TetherTradeInfo receiver = 8;
  google.protobuf.Timestamp expired_at = 9;
  // This is the data field of the inner exchange tether transaction
  google.protobuf.Any data = 10;
}
